# ocr-processing-llm

./: .env.example  .gitignore  ARCHITECTURE_PROMPT.md  AUTH_IMPLEMENTATION_PLAN.md  BUSINESS_PITCH.md  COMMERCIALIZATION_STRATEGY.md  DEPENDENCIES.md  DEPLOYMENT.md  Dockerfile  FULL_STACK_GUIDE.md  INVOICE_PROCESSING_MVP.md  LOCAL_SETUP.md  MVP_READY.md  PRODUCTION_ROADMAP.md  PROJECT_DOCUMENTATION.md  PROJECT_STRUCTURE.md  PROVIDER_COMPARISON.md  QUICKSTART.md  README.md  SUBSTACK_POST.md  TROUBLESHOOTING_AUTH.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  start-local.sh  test_memory.py
frontend/: Dockerfile  Dockerfile.render  README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ChatInterface.tsx  EditInvoiceModal.tsx  FileUploader.tsx  InvoiceDashboard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  exportUtils.ts  utils.ts
frontend/src/types/: index.ts
src/adamani_ai_rag/api/: app.py  dependencies.py  main.py
src/adamani_ai_rag/api/models/: __init__.py  requests.py  responses.py
src/adamani_ai_rag/auth/: __init__.py  config.py  manager.py  schemas.py
src/adamani_ai_rag/config/: __init__.py  settings.py
src/adamani_ai_rag/core/: __init__.py  embeddings.py  llm.py  memory.py  ocr.py  pdf_processor.py  vectorstore.py
src/adamani_ai_rag/database/: __init__.py  base.py  models.py  session.py
src/adamani_ai_rag/services/: document_service.py  invoice_extractor.py  organization_service.py  rag_service.py
src/adamani_ai_rag/utils/: __init__.py  logger.py
(+5 files in other folders)
